--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
               <artifactId>cobertura-maven-plugin</artifactId>
               <version>2.7</version>
           </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-war-plugin</artifactId>
+              <version>2.6</version>
+              <configuration>
+                  <failOnMissingWebXml>false</failOnMissingWebXml>
+              </configuration>
+          </plugin>
       </plugins>
   </build>
 </project>
